--- a/docs/hoge.css
+++ b/docs/hoge.css
@@ -2,3 +2,12 @@
   position: absolute;
   bottom: 32px;
 }
+.fixed-app {
+  height: 100%;
+  overflow: hidden;
+}
+.scroll {
+  height: 100%;
+  overflow: scroll;
+
+}
