--- a/src/main.css
+++ b/src/main.css
@@ -26,7 +26,7 @@
 }
 .label {
   width: 160px;
-  background-color: gray;
+  background-color: lightgray;
   height: 28px;
   line-height: 28px;
   padding-left: 8px;
