--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -13,15 +13,9 @@
 
   .mainContainer .inputContainer {
     flex: 1;
-    display: flex;
-    flex-flow: column;
   }
 
-  .mainContainer .inputContainer .editorContainer {
-    flex: 1;
-  }
-
-  .mainContainer .inputContainer .editorContainer .editor {
+  .mainContainer .inputContainer .editor {
     width: 100%;
     height: 100%;
     outline: none;
@@ -29,8 +23,10 @@
     border: none;
   }
 
-  .mainContainer .inputContainer .actionContainer {
-    height: 56px;
+  .mainContainer .inputContainer .menu {
+    position: fixed;
+    bottom: 0;
+    right: 0;
   }
 
   .textlabel {
