--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -1,8 +1,12 @@
 @media (max-width: 559px) {
-  .ab {
+  .fixedActionContainer {
     position: fixed;
-    left: 144px;
-    bottom: 32px;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 16px;
+    display: flex;
+    justify-content: space-around;
   }
 
   .menu {
