--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -28,7 +28,7 @@
 
   .textlabel {
     width: 160px;
-    background-color: lightgray;
+    background-color: rgba(211, 211, 211, 0.6);
     height: 28px;
     line-height: 28px;
     padding-left: 8px;
