--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -34,6 +34,10 @@
     padding-left: 8px;
     overflow: hidden;
   }
+  .textlabel.willArchive {
+    background-color: rgba(255, 0, 0, 0.6);
+  }
+
   .red {
     color: red;
   }
