--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -21,14 +21,9 @@
     flex-direction: column;
   }
 
-  .mainContainer .inputContainer .editorContainer {
+  .mainContainer .inputContainer .editor {
     width: 100%;
     flex: 1;
-  }
-
-  .mainContainer .inputContainer .editorContainer textarea {
-    width: 100%;
-    height: 100%;
     outline: none;
     padding: 8px;
     border: none;
