--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -4,9 +4,9 @@
     bottom: 0;
     width: 100%;
     text-align: center;
-    padding: 16px;
+    padding: 16px 32px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .fixedActionContainer .item {
@@ -34,6 +34,10 @@
     color: red;
   }
   .editor {
+    display: none;
+  }
+
+  .none {
     display: none;
   }
 }
