--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -3,34 +3,34 @@
     height: 100%;
   }
 
-  .mainContainer {
+  .CMain {
     height: 100%;
     width: 100vw;
     overflow: hidden;
     display: flex;
   }
 
-  .mainContainer .textsContainer {
+  .CMain .CTexts {
     width: 160px;
     border-right: solid medium gray;
     overflow-y: scroll;
   }
 
-  .mainContainer .inputContainer {
+  .CMain .inputContainer {
     flex: 1;
     display: flex;
     flex-direction: column;
   }
 
-  .mainContainer .inputContainer .editorContainer {
+  .CMain .inputContainer .editorContainer {
     flex: 1;
   }
 
-  .mainContainer .inputContainer .editor {
+  .CMain .inputContainer .editor {
     height: 100%;
   }
 
-  .mainContainer .inputContainer .fixedActionContainer {
+  .CMain .inputContainer .fixedActionContainer {
     width: 100%;
     display: flex;
     text-align: center;
