--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -1,4 +1,10 @@
 @media (max-width: 559px) {
+  html, body, #root {
+    width:100vw;
+    height:100%;
+    overflow:hidden;
+  }
+
   .fixedActionContainer {
     position: fixed;
     bottom: 0;
