--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -5,20 +5,16 @@
     overflow:hidden;
   }
 
-  .rootContainer {
-    height: 100%;
-  }
-
   .CMain {
     height: 100%;
     width: 100vw;
     overflow: hidden;
     display: flex;
+    padding: 8px 0;
   }
 
   .CMain .CTexts {
-    width: 160px;
-    border-right: solid medium gray;
+    padding: 0 4px;
     overflow-y: scroll;
   }
 
@@ -26,29 +22,37 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    padding: 0 8px;
   }
 
   .CMain .inputContainer .editorContainer {
     flex: 1;
   }
 
-  .CMain .inputContainer .editor {
+  .CMain .inputContainer .editorContainer textarea {
     height: 100%;
   }
 
   .CMain .inputContainer .fixedActionContainer {
     width: 100%;
+    height: 80px;
+    padding: 16px 0;
     display: flex;
     text-align: center;
-    justify-content: space-around;
+    justify-content: flex-end;
+  }
+
+  .CMain .inputContainer .fixedActionContainer div {
+    margin: 0 8px;
   }
 
   .textlabel {
+    background-color: white;
+    margin-bottom: 4px;
     width: 160px;
     height: 28px;
     line-height: 28px;
-    padding-left: 8px;
+    padding-left: 4px;
     overflow: hidden;
-    border-bottom: solid thin gray;
   }
 }
