--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -71,4 +71,14 @@
   .CEditor {
     padding: 0 4px;
   }
+  .old-memo {
+    background-color: rgba(255, 255, 255, 0.6);
+    height: 36px;
+    line-height: 36px;
+    padding-left: 4px;
+    overflow: hidden;
+  }
+  .old-memo:not(:last-child) {
+    margin-bottom: 8px;
+  }
 }
