--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -82,17 +82,17 @@
     margin-bottom: 8px;
   }
 
-  .tab {
+  .mytab {
     flex: 1;
     text-align: center;
     height: 40px;
     line-height: 40px;
   }
-  .tab.selected {
+  .mytab.selected {
     color: white;
     border-bottom: white solid 1px;
   }
-  .tabs {
+  .mytabs {
     display: flex;
     height: 40px;
   }
