--- a/src/css/sp.css
+++ b/src/css/sp.css
@@ -81,6 +81,16 @@
   .old-memo:not(:last-child) {
     margin-bottom: 8px;
   }
+  .auto-deleted-memo {
+    background-color: rgba(255, 0, 0, 0.6);
+    height: 36px;
+    line-height: 36px;
+    padding-left: 4px;
+    overflow: hidden;
+  }
+  .auto-deleted-memo:not(:last-child) {
+    margin-bottom: 8px;
+  }
 
   .mytab {
     flex: 1;
